# librpc

./: .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  Jenkinsfile  LICENSE  Makefile  README.md  README_PR.md  cmake_uninstall.cmake.in  commdoc.md  config.h.in  gtester.xsl  librpc.pc.in  requirements.sh  setup.sh
bindings/c++/: CMakeLists.txt
bindings/c++/examples/object/: CMakeLists.txt  object.cc
bindings/c++/include/: librpc.hh
bindings/c++/src/: rpc_connection.cc  rpc_object.cc
bindings/python/: CMakeLists.txt  librpc.pxd  librpc.pyx  setup.py
bindings/python/examples/client/: librpc_client.py
bindings/python/examples/nested_structs/: nested_structs.py  structs.yaml
bindings/python/examples/server/: server.py
bindings/python/src/: bus.pxi  client.pxi  connection.pxi  librpc.pyx  object.pxi  query.pxi  rpcd.pxi  serializer.pxi  server.pxi  service.pxi  typing.pxi
c++/: CMakeLists.txt
debian/: .gitignore  changelog  control  copyright  librpc-dev.install  librpc-tools.install  librpc.install  librpc1.install  python3-librpc.install  rpcd.install  rules
docs/: Makefile
examples/: client.c  server.c
html/: annotated.html  bus_8c-example.html  bus_8c_source.html  bus_8h.html  bus_8h__dep__incl.map  bus_8h__dep__incl.md5  bus_8h__incl.map  bus_8h__incl.md5  bus_8h_source.html  classes.html  client_8c-example.html  client_8c_source.html  client_8h.html  client_8h__dep__incl.map  client_8h__dep__incl.md5  client_8h__incl.map  client_8h__incl.md5  client_8h_source.html  connection_8h.html  connection_8h__dep__incl.map  connection_8h__dep__incl.md5  connection_8h__incl.map  connection_8h__incl.md5  connection_8h_source.html  dir_000001_000018.html  dir_000002_000018.html  dir_000003_000018.html  dir_000004_000018.html  dir_000005_000018.html  dir_000006_000018.html  dir_000007_000018.html  dir_000009_000018.html  dir_000010_000018.html  dir_000011_000018.html  dir_000012_000018.html  dir_000013_000018.html  dir_000014_000018.html  dir_000015_000018.html  dir_000016_000018.html  dir_000017_000018.html  (+161 more)
idl/: common.yaml  discovery.yaml
javascript/: .gitignore  Makefile  gulpfile.js  librpc.min.js  package.json
kmod/: CMakeLists.txt  Makefile  librpc.c  librpc.h  librpc_usb.c  librpc_user.c  librpc_user.h
latex/: annotated.tex  bus_8c-example.tex  bus_8h.tex  bus_8h__dep__incl.md5  bus_8h__incl.md5  client_8c-example.tex  client_8h.tex  client_8h__dep__incl.md5  client_8h__incl.md5  connection_8h.tex  connection_8h__dep__incl.md5  connection_8h__incl.md5  dir_062d25667a35a29351bda4cfb9cefc99.tex  dir_0857a1da5b8e58b426125fc9a353f6e2.tex  dir_0857a1da5b8e58b426125fc9a353f6e2_dep.md5  dir_133361f2a1490e6d02ed26698a9bbef0.tex  dir_133361f2a1490e6d02ed26698a9bbef0_dep.md5  dir_17358ff44bb8eeea897f379982121e3d.tex  dir_17358ff44bb8eeea897f379982121e3d_dep.md5  dir_203d4d556f0b43667aeffd628b7d55e3.tex  dir_213df0c97a4d4509b7adab236d0528c0.tex  dir_213df0c97a4d4509b7adab236d0528c0_dep.md5  dir_2146392227a0f211600405271e341870.tex  dir_2146392227a0f211600405271e341870_dep.md5  dir_2465f10c4668733736ce272b9e766cac.tex  dir_26df6c18271b4ec683b70d44ac22bed0.tex  dir_26df6c18271b4ec683b70d44ac22bed0_dep.md5  dir_37179c68804b0235bcbb5e5ae8d3eb2e.tex  dir_3f8e5f4624840acaf1150c53e02118d5.tex  dir_3f8e5f4624840acaf1150c53e02118d5_dep.md5  dir_6f80f7e3831db8be44a1c083dda45589.tex  dir_a1682b4f269efdb6ccfa396f3169c6c0.tex  dir_a1682b4f269efdb6ccfa396f3169c6c0_dep.md5  dir_a2bdf9a24f7d90fcaeb19f1903ec2e3d.tex  dir_a2bdf9a24f7d90fcaeb19f1903ec2e3d_dep.md5  dir_aa03e62e9ffe748bfd75a46ccb4421cd.tex  dir_aa03e62e9ffe748bfd75a46ccb4421cd_dep.md5  dir_c0981fdac23f0b29dd1a9f868eda1309.tex  dir_d0724a4ba22dd8807ba741c246d71cf9.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  (+54 more)
python/: CMakeLists.txt  Makefile  defs.pxd  librpc.pxd  librpc.pyx  setup.py
python/examples/: client.py  server.py
python/examples/client/: CMakeLists.txt  librpc_client.py  setup.py
python/utils/: convert_manifest.py
src/: endian.h  internal.h  linker_set.h  memfd.h  notify.h  notify_eventfd.c  notify_kqueue.c  rpc_bus.c  rpc_client.c  rpc_connection.c  rpc_discovery.c  rpc_interface.c  rpc_object.c  rpc_query.c  rpc_rpcd_client.c  rpc_serializer.c  rpc_server.c  rpc_service.c  rpc_shmem.c  rpc_typing.c  utils.c
tests/: catch.hpp  internal.c  json.cc  main.c  object.cc  serializer.c  tests.h  tests_main.cpp  transport.c
tests/benchmarks/: CMakeLists.txt  com.twoporeguys.dbustest.conf  dbus-client.c  dbus-server.c  dbus-strings.h  librpc-client.c  librpc-server.c  run.py
tools/: deploy-docs.sh  inspect.py  inspector.py
tools/rpcapigen/: CMakeLists.txt
tools/rpcapigen/librpc_apigen/: __init__.py
tools/rpcapigen/librpc_apigen/templates/: objc.mako
tools/rpcd/: CMakeLists.txt
tools/rpcd/etc/: rpcd-ws.socket.in  rpcd.service.in  rpcd.socket.in
tools/rpcd/idl/: rpcd.yaml
tools/rpcd/src/: internal.h  main.c  ws.c
tools/rpcdoc/: CMakeLists.txt  MANIFEST.in  rpcdoc.py  setup.py
tools/rpcdoc/librpc_doc/: __init__.py
tools/rpcdoc/librpc_doc/templates/: base.mako  index.mako  interface.mako  partials.mako  type.mako
tools/rpcdoc/rpcdoc/: __init__.py
tools/rpcdoc/rpcdoc/assets/: main.css
tools/rpcdoc/rpcdoc/templates/: index.mako  partials.mako  type.mako
types/: common.yaml  discovery.yaml
xml/: bus_8c-example.xml  bus_8c.xml  bus_8h.xml  client_8c-example.xml  client_8c.xml  client_8h.xml  connection_8h.xml  dir_062d25667a35a29351bda4cfb9cefc99.xml  dir_0857a1da5b8e58b426125fc9a353f6e2.xml  dir_133361f2a1490e6d02ed26698a9bbef0.xml  dir_17358ff44bb8eeea897f379982121e3d.xml  dir_203d4d556f0b43667aeffd628b7d55e3.xml  dir_213df0c97a4d4509b7adab236d0528c0.xml  dir_2146392227a0f211600405271e341870.xml  dir_2465f10c4668733736ce272b9e766cac.xml  dir_26df6c18271b4ec683b70d44ac22bed0.xml  dir_37179c68804b0235bcbb5e5ae8d3eb2e.xml  dir_3f8e5f4624840acaf1150c53e02118d5.xml  dir_6f80f7e3831db8be44a1c083dda45589.xml  dir_a1682b4f269efdb6ccfa396f3169c6c0.xml  dir_a2bdf9a24f7d90fcaeb19f1903ec2e3d.xml  dir_aa03e62e9ffe748bfd75a46ccb4421cd.xml  (+55 more)
(+197 files in other folders)
